Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-34921

MemorySanitizer reports errors for non-debug builds

    XMLWordPrintable

Details

    Description

      Until now, we had run MemorySanitizer instrumented builds based on CMAKE_BUILD_TYPE=Debug and not CMAKE_BUILD_TYPE=RelWithDebInfo, which would be closer to what we release.

      There are a few minor errors that cause some tests to fail. Additionally, some Connect and a few Spider tests are failing due to use-of-uninitialized-value. Until now, MemorySanitizer builds on our CI did not cover them. Those bugs should be fixed separately.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.75d
                  0.75d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.